# VoiceFlow

./: README.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: release.yml
docs/: linux-control-socket.md
installer/: AppRun  VoiceFlow.desktop  build-linux.sh  io.github.infiniv.VoiceFlow.metainfo.xml  voiceflow.iss  voiceflow.service.example
public/: site.webmanifest
src/: index.css
src-pyloid/: app_controller.py  main.py  server.py
src-pyloid/icons/: icon.icns
src-pyloid/services/: clipboard.py  control_socket.py  database.py  gpu.py  hotkey.py  logger.py  model_manager.py  process_env.py  settings.py  transcription.py
src-pyloid/services/recording/: __init__.py  audio_scheme.py  audio_scheme_handler.py  audio_source.py  clock.py  controller.py  export.py  llm.py  loopback_linux.py  loopback_pulse.py  loopback_windows.py  recorder.py  recovery.py  secrets.py  summary.py  title.py
src-pyloid/tests/: test_app_controller.py  test_audio.py  test_audio_scheme.py  test_audio_source_loopback_channels.py  test_audio_source_resample.py  test_auto_title.py  test_llm_provider.py  test_loopback_discovery.py  test_meeting_state_tick.py  test_model_manager.py  test_recording_export.py  test_recording_recovery.py  test_recording_service.py  test_recordings_repo.py  test_recordings_settings.py  test_summary.py  test_transcribe_file.py
src/components/: HistoryPage.tsx  HomePage.tsx  HotkeyStatusBanner.tsx  ModelDownloadModal.tsx  SettingsTab.tsx  Sidebar.tsx  StatsHeader.tsx
src/components/meetings/: AudioPlayer.tsx  LLMSettingsSection.tsx  LevelMeter.tsx  MeetingDetailPage.tsx  MeetingImportDialog.tsx  MeetingRecorderContext.tsx  MeetingRecorderPage.tsx  MeetingsListPage.tsx  MeetingsSettingsSection.tsx  RetranscribeDialog.tsx  StatusLine.tsx  SummaryView.tsx  TranscriptView.tsx  utils.ts
src/components/ui/: button.tsx  sheet.tsx
src/lib/: api.ts  constants.ts  types.ts  utils.ts
src/pages/: Dashboard.tsx  Onboarding.tsx  Popup.tsx
