[project]
name = "VoiceFlow"
version = "1.5.0"
readme = "README.md"
description = "Offline voice-to-text dictation for Windows, Linux & macOS. Private, local Whisper."
keywords = ["voice-to-text", "dictation", "whisper", "speech-to-text", "offline", "linux", "wayland", "transcription", "stt", "faster-whisper", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Office/Business",
]

[project.urls]
Homepage = "https://get-voice-flow.vercel.app/"
Repository = "https://github.com/infiniV/VoiceFlow"
Issues = "https://github.com/infiniV/VoiceFlow/issues"
Releases = "https://github.com/infiniV/VoiceFlow/releases"

requires-python = ">=3.9"

dependencies = [
    "pyloid",
    "faster-whisper",
    "pynput",
    "sounddevice",
    "numpy",
    "pyperclip",
    "pyautogui",
    "keyboard>=0.13.5; sys_platform == 'win32'",
    "evdev>=1.7.0; sys_platform == 'linux'",
    "nvidia-cublas-cu12; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pyloid-builder",
    "pyloid-watcher",
    "ruff",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["src-pyloid/tests"]
markers = [
    "network: tests that hit huggingface.co (slow, opt-in via VOICEFLOW_NETWORK_TESTS=1)",
    "big_model: tests that download multi-GB models (opt-in via VOICEFLOW_BIG_MODEL_TESTS=1)",
]
